--- a/style.css
+++ b/style.css
@@ -18,9 +18,20 @@ body {
   margin-right:auto;
 }
 
+.favicon {
+  width: 50px;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.favicon:hover {
+  cursor: pointer;
+}
+
 h1 {
   margin-top:0;
   padding-top: .8em;
+  display: inline-block;
 }
 
 h1, h3, h4 {
@@ -199,7 +210,7 @@ a {
   margin: 10px;
 }
 
-h1, .js-search-form {
+.js-search-form {
   margin-left: 10px;
 }
 
